Fixes and refactor
fix social networks nav, refactor css repetitive code, delete scrollbar, reorganize code

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*ESTILOS GENERALES*/
 * {
     padding: 0;
     box-sizing: border-box;
@@ -12,101 +13,53 @@ body {
     font-family: 'Lato', sans-serif;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     color: white;
+    text-align: center;
 }
 
-/*Custom scrollbar*/
-::-webkit-scrollbar { width: 9px; height: 9px;}
-::-webkit-scrollbar-button { width: 0px; height: 0px;}
-::-webkit-scrollbar-thumb { background: transparent; border: 0px none #fff; border-radius: 10px;}
-::-webkit-scrollbar-thumb:hover { background: #FFCC70;}
-::-webkit-scrollbar-thumb:active { background: #c850c08e;}
-::-webkit-scrollbar-track {background: transparent;border: 0px solid #aaa; border-radius: 5px;}
-::-webkit-scrollbar-track:hover { background: #e4e4e4;}
-::-webkit-scrollbar-track:active { background: #d2d2d2;}
-::-webkit-scrollbar-corner { background: transparent;}
+main { flex-direction: column; }
 
-.container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
+.flex { display: flex; }
 
-header {
-    position: relative;
-}
+.center { justify-content: center; align-items: center; }
 
-.imagen {
+strong { color:#FFCC70; }
+
+/*ESTILO HEADER*/
+header { position: relative; }
+
+.avatar {
     border-radius: 50%;
     background-image: url(./assets/ag.png);
     background-size: cover;
     width: 135px;
     height: 135px;
     border: 0.02px solid rgb(15, 15, 15);
-    display: grid;
-    align-self: center;
+    margin-top: 1em;
 }
 
 .title {
-    text-align: center;
     font-weight: 800;
     text-transform: uppercase;
     font-style: italic;
-    margin: 0;
-    font-size: clamp(1em, 4vw, 1.725em);
+    font-size: clamp(.7rem, 4vw, 1.8rem);
 }
 
-.redesSociales {
-    padding-inline-start: 0px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
-strong {
-    color:#FFCC70;
-}
-
-nav, a {
-    display: inline-block;
-    list-style: none;
-    text-align: center;
-}
-
-ul {
-    list-style: none;
-}
-
-li {
-    padding-left: 0px 10px 0px 15px;
-    transition: transform .2s cubic-bezier(.333,0,0,1);
-}
-
-.redesSociales li a {
-    padding-right: 1rem;
-}
-
-.redesSociales li a:hover {
-    transform: scale(1.2);
-} 
+/*ESTILO BARRAS DE NAVEGACIÓN (REDES SOCIALES Y BOTONES)*/
+nav, a { display: inline-block; }
+ul { list-style: none; }
+li { padding: 0px 10px 0px 15px; transition: transform .2s cubic-bezier(.333,0,0,1);}
+li a:hover { transform: scale(1.2); } 
 
 img {
     color: white;
-    width: 40px;
+    width: clamp(3rem, 3vw, 6rem);
     display: inline-block;
-}
-
-p {
-    font-size: clamp(1rem, 3vw, 1.25rem);
-    text-align: center;
-    line-height: 25px;
-    letter-spacing: -0.6px;
-    margin: 0px 50px 5px 50px;
 }
 
 button {
     font-size: clamp(.850rem, 4vw, 1rem);
     padding: 10px;
-    width: 180px;
+    width: 280px;
     margin-bottom: 15px;
     border-radius: 5px;
     border: none;
@@ -115,8 +68,7 @@ button {
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
     color: #4158D0;
-    transition: background 0.5s;
-    transition: color 0.5s;
+    transition: background 0.5s, color 0.5s;
     cursor: pointer;
 }
 
@@ -125,24 +77,26 @@ button:hover {
     background: transparent;
 }
 
+/*ESTILO PARRAFOS*/
+p {
+    font-size: clamp(1.125rem, 3vw, 1.25rem);
+    line-height: 25px;
+    letter-spacing: -0.6px;
+    margin: 0px 50px 5px 50px;
+}
+
+/*ESTILO FOOTERS*/
 footer {
     width: 90vw;
     border-top: 1px solid rgb(49, 49, 49);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     font-size: clamp(.250rem, 4vw, 1rem);
+    flex-wrap: wrap;
 }
 
-footer p {
-    margin: 10px 10px 5px 10px;
-}
+footer p { margin: 1em; }
 
-/*NOT FOUND SPECIFICS*/
-
+/*ESTILO NOT FOUND*/
 .not-found {
-    
     min-height: 100vh;
     overflow-y: hidden;
     justify-content: center;
